switch to version 8 to match jenkins java version